# dejadb

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ERROR_CODES.md  FAQ.md  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  deny.toml  llms.txt
crates/dejadb-bench/: Cargo.toml  RESULTS.md
crates/dejadb-bench/results/: README.md  locomo-gpt-4o-mini-k20-2026-07-07.summary.json  locomo-gpt-4o-mini-k20-2026-07-07.transcripts.jsonl
crates/dejadb-bench/scripts/: embed_locomo.py  openai_chat.py  parse_results.py
crates/dejadb-bench/src/: lib.rs
crates/dejadb-cal/: CLAUDE.md  Cargo.toml  README.md
crates/dejadb-cal/src/: assemble.rs  ast.rs  dejadb_facade.rs  errors.rs  executor.rs  facade.rs  humanize.rs  json.rs  json_build.rs  lexer.rs  lib.rs  parser.rs  queries.rs  relations.rs  store_types.rs  templates.rs
crates/dejadb-cal/tests/: assemble_mount_tests.rs  cal_integration.rs  readonly_query_body_tests.rs  recall_tuning_cal_tests.rs
crates/dejadb-cli/: Cargo.toml  README.md
crates/dejadb-cli/src/: main.rs
crates/dejadb-cli/tests/: cli_smoke.rs  golden_tests.rs  golden_waiser_tests.rs  mcp_smoke.rs  migrate_smoke.rs
crates/dejadb-cli/tests/golden/: CLAUDE.md  generator.rs  mod.rs  waiser_generator.rs
crates/dejadb-cli/tests/golden/dataset/: golden.bundle  manifest.json  waiser-manifest.json  waiser.bundle
crates/dejadb-cli/tests/golden/dataset/renders/: assemble.budget30.sml.golden  assemble.profile.markdown.golden  assemble.profile.sml.golden  assemble.profile.toon.golden  john.json.golden  john.markdown.golden  john.sml.golden  john.toon.golden
crates/dejadb-cli/tests/golden/dataset/waiser/: analyzers.txt  list-pending.json  list-pending.txt  outcomes-held.json  outcomes-regressed.json  policy-default.json  policy-granting.json  recall-hook-waiser-block.txt  run-after-regression.json  run-auto-apply.json  run-first.json  run-reflect.json  run-skip-min-new.json  (+2 more)
crates/dejadb-context/: CLAUDE.md  Cargo.toml  README.md
crates/dejadb-context/src/: assembly.rs  budget.rs  lib.rs  policy.rs  presets.rs  render.rs
crates/dejadb-context/tests/: snapshot_render.rs
crates/dejadb-context/tests/snapshots/: snapshot_render__budget_truncation_json.snap  snapshot_render__budget_truncation_sml.snap  snapshot_render__json.snap  snapshot_render__markdown.snap  snapshot_render__sml.snap  snapshot_render__toon.snap
crates/dejadb-core/: CLAUDE.md  Cargo.toml  README.md
crates/dejadb-core/src/: error.rs  lib.rs
crates/dejadb-core/src/format/: deserialize.rs  field_map.rs  header.rs  mod.rs  serialize.rs
crates/dejadb-core/src/format/tool_schema/: anthropic.rs  escape.rs  gemini.rs  hermes.rs  llama31.rs  markdown.rs  mcp.rs  mod.rs  openai.rs  parse.rs  sml.rs
crates/dejadb-core/src/types/: consensus.rs  consent.rs  event.rs  executor_kind.rs  fact.rs  goal.rs  grain.rs  json_schema_subset.rs  mod.rs  observation.rs  reasoning.rs  registry.rs  skill.rs  state.rs  tool.rs  workflow.rs
crates/dejadb-core/tests/: bugfix_regression_tests.rs  oms_conformance.rs  proptest_roundtrip.rs  tool_schema_snapshots.rs
crates/dejadb-core/tests/snapshots/: tool_schema_snapshots__search_anthropic_tools.snap  tool_schema_snapshots__search_gemini_tools.snap  tool_schema_snapshots__search_hermes.snap  tool_schema_snapshots__search_llama31.snap  tool_schema_snapshots__search_markdown_tools.snap  tool_schema_snapshots__search_mcp_tools.snap  tool_schema_snapshots__search_openai_responses.snap  tool_schema_snapshots__search_openai_tools.snap  tool_schema_snapshots__search_sml_tools.snap  tool_schema_snapshots__slack_anthropic_tools.snap  tool_schema_snapshots__slack_gemini_tools.snap  tool_schema_snapshots__slack_hermes.snap  tool_schema_snapshots__slack_llama31.snap  tool_schema_snapshots__slack_markdown_tools.snap  tool_schema_snapshots__slack_mcp_tools.snap  tool_schema_snapshots__slack_openai_responses.snap  tool_schema_snapshots__slack_openai_tools.snap  tool_schema_snapshots__slack_sml_tools.snap
crates/dejadb-js/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
crates/dejadb-js/__test__/: smoke.mjs
crates/dejadb-js/scripts/: prepare-npm.mjs
crates/dejadb-js/src/: lib.rs
crates/dejadb-llm/: Cargo.toml  README.md
crates/dejadb-llm/src/: lib.rs
crates/dejadb-mcp/: Cargo.toml  README.md
crates/dejadb-mcp/src/: lib.rs
crates/dejadb-py/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
crates/dejadb-py/src/: lib.rs
crates/dejadb-py/tests/: test_dejadb.py
crates/dejadb-server/: Cargo.toml  README.md
crates/dejadb-server/src/: console.html  lib.rs
crates/dejadb-server/tests/: http_smoke.rs  multichannel_tests.rs
crates/dejadb-store/: CLAUDE.md  Cargo.toml  README.md
crates/dejadb-store/examples/: bench.rs  voice_loop.rs
crates/dejadb-store/src/: asyncdb.rs  lib.rs  memory_tool.rs  migrate.rs  telemetry.rs
crates/dejadb-store/tests/: bugfix_regression_tests.rs  bundle_blob_tests.rs  command_embed_tests.rs  encryption_tests.rs  fork_merge_tests.rs  fts_hybrid_tests.rs  memtool_remember_tests.rs  meta_tests.rs  migrate_tests.rs  multilingual_vector_tests.rs  recall_tuning_tests.rs  store_tests.rs  telemetry_tests.rs  text_index_tests.rs
crates/dejadb-waiser/: Cargo.toml  README.md
crates/dejadb-waiser/src/: lib.rs  substrate.rs
crates/dejadb-waiser/tests/: adapter.rs
crates/waiser/: Cargo.toml  README.md
crates/waiser/src/: analyzer.rs  cal.rs  config.rs  engine.rs  error.rs  external.rs  integration.rs  lib.rs  llm.rs  manifest.rs  model.rs  policy.rs  recommendation.rs  reference.rs  substrate.rs  testkit.rs
crates/waiser/src/analyzers/: budget_pressure.rs  cold_grains.rs  contradiction_sweep.rs  coverage_gap.rs  duplicate_sweep.rs  fork_surfacing.rs  goal_stagnation.rs  mod.rs  outcome_review.rs  skill_stall.rs  staleness.rs  tool_failure.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cal_parse.rs  deserialize_blob.rs  tool_schema_parse.rs
(+70 files in other folders)
