[package]
name = "dejadb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Detached from the parent workspace on purpose: fuzz targets need a nightly
# toolchain + a sanitizer, so they must not be pulled into the stable
# `cargo build --workspace` / `cargo test --workspace` CI jobs. Run them with
# `cargo +nightly fuzz run <target>` from this directory.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
dejadb-core = { path = "../crates/dejadb-core" }
dejadb-cal = { path = "../crates/dejadb-cal" }

[[bin]]
name = "deserialize_blob"
path = "fuzz_targets/deserialize_blob.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cal_parse"
path = "fuzz_targets/cal_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tool_schema_parse"
path = "fuzz_targets/tool_schema_parse.rs"
test = false
doc = false
bench = false
