[package]
name = "dejadb-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Internal benchmark harness for DejaDB (not published)."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
dejadb-core = { path = "../dejadb-core", version = "1.0.0" }
dejadb-store = { path = "../dejadb-store", version = "1.0.0" }
dejadb-cal = { path = "../dejadb-cal", version = "1.0.0" }
dejadb-context = { path = "../dejadb-context", version = "1.0.0" }
dejadb-server = { path = "../dejadb-server", version = "1.0.0" }
serde_json = "1"
turso = "0.7.0"
tokio = { version = "1", features = ["rt"] }
tempfile = "3"
