[package]
name = "dejadb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line interface for DejaDB, the embedded memory engine for AI agents."
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["memory", "cli", "ai-agents", "llm", "database"]
categories = ["command-line-utilities", "database-implementations"]
publish = false

[[bin]]
name = "deja"
path = "src/main.rs"

[dependencies]
dejadb-core = { path = "../dejadb-core" }
dejadb-store = { path = "../dejadb-store" }
dejadb-cal = { path = "../dejadb-cal" }
serde_json = "1"
zeroize = "1"

dejadb-mcp = { path = "../dejadb-mcp" }
dejadb-context = { path = "../dejadb-context" }
dejadb-server = { path = "../dejadb-server" }

[dev-dependencies]
tempfile = "3"
