[package]
name = "dejadb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line interface for DejaDB, the embedded memory engine for AI agents."
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["memory", "cli", "ai-agents", "llm", "database"]
categories = ["command-line-utilities", "database-implementations"]

[[bin]]
name = "deja"
path = "src/main.rs"

[dependencies]
dejadb-core = { path = "../dejadb-core", version = "1.0.0" }
dejadb-store = { path = "../dejadb-store", version = "1.0.0" }
dejadb-cal = { path = "../dejadb-cal", version = "1.0.0" }
serde_json = "1"
zeroize = "1"

dejadb-mcp = { path = "../dejadb-mcp", version = "1.0.0" }
dejadb-context = { path = "../dejadb-context", version = "1.0.0" }
dejadb-server = { path = "../dejadb-server", version = "1.0.0" }
waiser = { path = "../waiser" }
dejadb-waiser = { path = "../dejadb-waiser" }

[dev-dependencies]
tempfile = "3"
