[package]
name = "dejadb-js"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MindGryd Software Private Limited"]
repository = "https://github.com/AreevAI/dejadb"
homepage = "https://github.com/AreevAI/dejadb"
description = "Node.js (napi-rs) bindings for DejaDB, the embedded memory engine for AI agents."
readme = "README.md"
publish = false

# Detached from the parent workspace on purpose (exactly like fuzz/Cargo.toml):
# napi cdylibs resolve Node-API symbols at *load* time (via macOS
# `-undefined dynamic_lookup`), so they must not be pulled into the stable
# `cargo build --workspace` / `cargo test --workspace` CI. Build this crate
# from inside crates/dejadb-js with `napi build` (or a bare `cargo build`).
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dejadb-core = { path = "../dejadb-core", version = "1.0.0" }
dejadb-store = { path = "../dejadb-store", version = "1.0.0" }
dejadb-cal = { path = "../dejadb-cal", version = "1.0.0" }
dejadb-context = { path = "../dejadb-context", version = "1.0.0" }
waiser = { path = "../waiser" }
dejadb-waiser = { path = "../dejadb-waiser" }
dejadb-llm = { path = "../dejadb-llm" }
serde_json = "1"
napi = { version = "3", features = ["napi9"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
