[package]
name = "dejadb-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Python bindings for DejaDB, the embedded memory engine for AI agents."
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["memory", "python", "ai-agents", "llm", "bindings"]
categories = ["api-bindings"]
publish = false

[lib]
name = "dejadb"
crate-type = ["cdylib"]

[dependencies]
dejadb-core = { path = "../dejadb-core" }
dejadb-store = { path = "../dejadb-store" }
dejadb-cal = { path = "../dejadb-cal" }
dejadb-context = { path = "../dejadb-context" }
serde_json = "1"
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
