[package]
name = "dejadb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Web console and sync-hub server for DejaDB."
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["memory", "server", "sync", "ai-agents", "http"]
categories = ["web-programming::http-server"]

[dependencies]
dejadb-core = { path = "../dejadb-core", version = "1.0.0" }
dejadb-store = { path = "../dejadb-store", version = "1.0.0" }
dejadb-cal = { path = "../dejadb-cal", version = "1.0.0" }
dejadb-context = { path = "../dejadb-context", version = "1.0.0" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
