[package]
name = "dejadb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Web console and sync-hub server for DejaDB."
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["memory", "server", "sync", "ai-agents", "http"]
categories = ["web-programming::http-server"]
publish = false

[dependencies]
dejadb-core = { path = "../dejadb-core" }
dejadb-store = { path = "../dejadb-store" }
dejadb-cal = { path = "../dejadb-cal" }
dejadb-context = { path = "../dejadb-context" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
