[package]
name = "dejadb-waiser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "DejaDB substrate adapter for the Waiser engine: implements waiser::OmsSubstrate over DejaDbFacade so `deja waiser` runs against real .mg/Turso memory files."
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ai-agents", "memory", "waiser", "self-improvement", "dejadb"]
categories = ["algorithms"]
# The adapter glues the (churny) engine to DejaDB; it stays in this repo even
# after the engine is lifted out (proposal §10). Not published during churn.
publish = false

[dependencies]
waiser = { path = "../waiser" }
dejadb-core = { path = "../dejadb-core" }
dejadb-store = { path = "../dejadb-store" }
dejadb-cal = { path = "../dejadb-cal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
